--- a/src/quizml/templates/preview-html.jinja
+++ b/src/quizml/templates/preview-html.jinja
@@ -1,3 +1,9 @@
+<| set ns = namespace(total_marks=0) |>
+<| set default_marks = {'mc': 2.5, 'ma': 2.5, 'tf': 2.5, 'essay': 5, 'matching': 2.5, 'ordering': 2.5} |>
+<| for q in questions if q.type in default_marks -|>
+    <| set q_marks = q.marks | float if q.marks is defined else default_marks.get(q.type, 0) |>
+    <| set ns.total_marks = ns.total_marks + q_marks |>
+<| endfor |>
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
   <head>
@@ -105,7 +111,7 @@
     </style>
   </head>
   <body>
-	<p><i>Total Possible Marks: << total_marks >> </i>
+	<p><i>Total Possible Marks: << ns.total_marks >> </i>
 	  <button onclick="toggleShowAnswers()"
 			  id="toggleShowAnswersBtn"
 			  style="float:right"
