--- a/src/quizml/templates/stats.jinja
+++ b/src/quizml/templates/stats.jinja
@@ -1,3 +1,4 @@
+<# This template is used when reporting the exam stats Command Line app #>
 <|- set ns = namespace(total_marks=0, expected_mark=0) -|>
 <|- set default_marks = {'mc': 2.5, 'ma': 2.5, 'tf': 2.5, 'essay': 5, 'matching': 2.5, 'ordering': 2.5} -|>
 
