Fix: Improve side figure implementation for MA/MC in preview.html.j2 template

--- a/src/quizml/templates/preview.html.j2
+++ b/src/quizml/templates/preview.html.j2
@@ -122,7 +122,7 @@
      }
      .question-figure {
          /* flex-basis set inline */
-         text-align: center;
+         text-align: left;
          align-self: flex-start;
      }
      .question-figure img, .question-figure svg {
