Feat: Add jinja syntax highlighting to docs
- Implemented Prism.js syntax highlighting for jinja-html and jinja-tex code blocks in the documentation.

- Updated docs/index.html to define the custom jinja language extensions.

- Modified docs/writing_templates.md to use the new language identifiers.

- Includes minor formatting fix in README.md and a template update.

--- a/src/quizml/templates/tcd-exam.tex.j2
+++ b/src/quizml/templates/tcd-exam.tex.j2
@@ -395,7 +395,7 @@ questions with multiple choices, mark all solutions that are correct
 
 \begin{multicols}{3}
 \begin{enumerate}
-<| set letter = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N'] |>
+<| set letter = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ' |>
 <| for q in questions +|>
 \item[{\bf Q.<<loop.index>>}]
 <|- if q.type == 'essay' |>
